<resources>
    <string name="app_name">Mon Endo</string>
    <string name="facebook_application_id">113729150041447</string>
    <string name="fb_login_protocol_scheme">fb113729150041447</string>
    <string name="sport">Sport</string>
    <string name="format">Format</string>
    <string-array name="duration">
        <item>Permanent</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
        <item>8 days</item>
        <item>9 days</item>
        <item>10 days</item>
        <item>11 days</item>
        <item>12 days</item>
        <item>13 days</item>
        <item>14 days</item>
        <item>15 days</item>
    </string-array>
    <string-array name="pill_format">
        <item>28</item>
        <item>21 + 7</item>
        <item>21</item>
        <item>14</item>
        <item>12</item>
        <item>10</item>
    </string-array>
    <string-array name="pill_value">
        <item>28</item>
        <item>29</item>
        <item>21</item>
        <item>14</item>
        <item>12</item>
        <item>10</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_login">You have cancelled the authentication process. Please try again.</string>
    <string name="network_to_login">A network access is required to login</string>
    <string name="unknown_error_login">An unknown error has occurred. Please try again</string>
    <string name="anonymous">Anonymous</string>
    <string name="dashboard">Dashboard</string>
    <string name="treatment">Treatment</string>
    <string name="fertility">Fertility</string>
    <string name="doctor">Doctor</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="my_pain">My pain</string>
    <string name="on_a_scale_of_0_to_10_how_do_you_rate_the_pain_today">On a scale of 0 to 10,how do you rate the pain today?</string>
    <string name="where_do_you_mainly_find_pain">Where do you mainly find pain?</string>
    <string name="lower_abdomen">Lower abdomen</string>
    <string name="bladder">Bladder</string>
    <string name="back">Back</string>
    <string name="head">Head</string>
    <string name="intestine">Intestine</string>
    <string name="breast">Breast</string>
    <string name="vagina">Vagina</string>
    <string name="what_are_the_main_symptoms">What are the main symptoms</string>
    <string name="burns">Burns</string>
    <string name="cramps">Cramps</string>
    <string name="bleeding">Bleeding</string>
    <string name="fever">Fever</string>
    <string name="chills">Chills</string>
    <string name="bloating">Bloating</string>
    <string name="hot_flush">Hot flush</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="constipation">Constipation</string>
    <string name="nausea">Nausea</string>
    <string name="tired">Tired</string>
    <string name="activities">Activities</string>
    <string name="what_have_you_done_today_and_what_are_the_factors_that_can_cause_pain">What have you done today and what are the factors that can cause pain?</string>
    <string name="sleep">Sleep</string>
    <string name="stress">Stress</string>
    <string name="relaxation">Relaxation</string>
    <string name="sex">Sex</string>
    <string name="other">Other</string>
    <string name="mood">Mood</string>
    <string name="sad">Sad</string>
    <string name="sick">Sick</string>
    <string name="irritated">Irritated</string>
    <string name="happy">Happy</string>
    <string name="very_happy">Very happy</string>
    <string name="save">Save</string>
    <string name="some_precisions_please">Some precisions please</string>
    <string name="what_activities_did_you_practiced">What activities did you practiced?</string>
    <string name="how_long_in_minutes">How long in minutes?</string>
    <string name="with_what_intensity_on_a_scale_from_0_to_10">With what intensity on a scale from 0 to 10</string>
    <string name="cancel">Cancel</string>
    <string name="rate_sleep_quality">How do you rate your sleep quality?</string>
    <string name="activity_name">Activity name :</string>
    <string name="activity_duration">Activity duration :</string>
    <string name="activity_instensity">Activity instensity :</string>
    <string name="delete">Delete</string>
    <string name="evolution_of_pain_over_the_last_7_days">Evolution of pain over the last 7 days</string>
    <string name="recurrence_of_symptoms_over_the_last_7_days">Recurrence of symptoms over the last 7 days</string>
    <string name="practiced_activities_over_the_last_7_days">Practiced activities over the last 7 days</string>
    <string name="sleep_quality_over_the_last_7_days">Sleep quality over the last 7 days</string>
    <string name="mood_repartition_over_the_last_7_days">Mood repartition over the last 7 days</string>
    <string name="pain_history_appear">Your pain history will appear here</string>
    <string name="symptom_history_appear">Your symptom history will appear here</string>
    <string name="activities_history_appear">Your activities history will appear here</string>
    <string name="sleep_quality_history_appear">You sleep quality history will appear here</string>
    <string name="mood_history_appear">Your mood history will appear here</string>
    <string name="activity_session">Number of %1$s sessions</string>
    <string name="activity_duration_chart">Average duration of %1$s</string>
    <string name="activity_intensity_chart">Average intensity of %1$s</string>
    <string name="sleep_quality">Sleep quality</string>
    <string name="pain_details">Detailed history of your pain</string>
    <string name="click_on_a_value_to_see_all_information_you_saved_that_day">Click on a value to see all information you saved that day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="_6_months">6 Months</string>
    <string name="year">Year</string>
    <string name="date">Date</string>
    <string name="pain_value">Pain value</string>
    <string name="location">Location</string>
    <string name="symptoms">Symptoms</string>
    <string name="practiced_activities">Practiced activities</string>
    <string name="sleep_detail_activity">%1$s with a quality value of %2$d</string>
    <string name="stress_detail_activity">%1$s with an intensity exposure of %2$d</string>
    <string name="other_detail_activity">%1$s during %2$d minutes and with an intensity of %3$d</string>
    <string name="click_on_a_pie_chart_s_value_to_see_the_symptom_evolution_in_time">Click on a pie chart\'s value to see the selected symptom\'s evolution in time</string>
    <string name="symptom_details">Detailed history of your symptoms</string>
    <string name="click_on_a_pie_chart_value_to_see_the_evolution_of_pain_with_activities">Click on a pie chart value to see the evolution of pain with activities</string>
    <string name="activities_detailed_history">Detailed history of your activities</string>
    <string name="other_activities">"Other : %1$s</string>
    <string name="sport_activities">"Sport : %1$s</string>
    <string name="click_on_a_value_to_see_the_detail_of_the_chosen_practiced_activity">Click on a value to see the detail of the chosen practiced activity</string>
    <string name="click_on_a_value_to_see_the_detail_of_the_chosen_symptom">Click on a value to see the detail of the chosen symptom</string>
    <string name="sleep_detail_history">Detailed history of your sleep</string>
    <string name="mood_detail_history">Detailed history of your mood</string>
    <string name="click_on_a_pie_chart_s_value_to_see_the_mood_s_evolution_in_time">Click on a pie chart\'s value to see the mood\'s evolution in time</string>
    <string name="click_on_a_value_to_see_the_detail_of_the_chosen_mood">Click on a value to see the detail of the chosen mood</string>
    <string name="your_contraceptive_pill">Your contraceptive pill</string>
    <string name="the_first_day_of_your_last_menstruation">The first day of your last menstruation</string>
    <string name="contra_pill_notif_id">Contraceptive Pill notification</string>
    <string name="contra_pill_notif_name">Contraceptive pill Channel</string>
    <string name="dont_forget_pill">Don\'t forget, it\'s time to take your contraceptive pill</string>
    <string name="check_pill">Check the corresponding pill in the tablet</string>
    <string name="the_time_you_want_to_be_notified_of_taking_your_pill">The time you want to be notified of taking your pill</string>
    <string name="others_treatments">Others treatments</string>
    <string name="add_treatment_button">Add treatment button</string>
    <string name="add_a_treatment">Add a treatment</string>
    <string name="treatment_s_name">Treatment\'s name</string>
    <string name="treatment_s_duration">Treatment\'s duration</string>
    <string name="dosage">Dosage</string>
    <string name="click_on_the_day_s_period_to_define_the_notification_s_hour_of_taking_treatment">Click to define the notification\'s hour of taking treatment</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="permanent">Permanent</string>
    <string name="treatment_channel_id">Treatment notification</string>
    <string name="treatment_channel_name">Treatment Channel</string>
    <string name="treatment_notif_title">Don\'t forget, it\'s time to take your treatment</string>
    <string name="treatment_notif_dosage">You must take  %1$s %2$s of %3$s</string>
    <string name="notification_s_times">Notification\'s times</string>
    <string name="delete_icon">Delete icon</string>
    <string name="until">Until</string>
    <string name="menstruation">Menstruation</string>
    <string name="ovulation">Ovulation</string>
    <string name="fertilization_period">Fertilization period</string>
    <string name="the_duration_of_your_menstruation_s_cycle">The duration of your menstruation\'s cycle</string>
    <string name="body_temperature_monitoring">Body temperature monitoring</string>
    <string name="for_more_precision_you_can_save_your_daily_body_s_temperature_to_see_precisely_your_ovulation_s_period">For more precision, you can save your daily body\'s temperature to see precisely your ovulation\'s period</string>
    <string name="pill_tablet_settings">Pill tablet settings</string>
    <string name="add_a_commentary">Add a commentary</string>
    <string name="doctor_endo_label">On a scale of 0 to 5, how would you assess the management of patients with endometriosis by this doctor?</string>
    <string name="enter_your_commentary_here">Enter your commentary here</string>
    <string name="saved_data">Saved data</string>
    <string name="delete_pains">Delete all pain entries?</string>
    <string name="delete_treatments">Delete all treatment\'s data</string>
    <string name="delete_temp_data">Delete all temperatures\' data</string>
    <string name="delete_mens_data">Delete all menstruation\'s data</string>
    <string name="can_delete_pains">You can delete all your saved pain entries</string>
    <string name="choose_nb_pill">You can choose the number of pill in a tablet to have a display that corresponding to your tablet</string>
    <string name="reset_treatment_data">You can reset all your treatment saved data</string>
    <string name="can_delete_mens_data">You can delete all your mensturation\'s saved data.</string>
    <string name="can_delete_temp_data">You can delete all your temperature\'s saved data.</string>
    <string name="can_delete_commentary">You can delete a commentary about a doctor</string>
    <string name="delete_comment">Delete a commentary</string>
</resources>