<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="saved_data"
        android:title="@string/saved_data">

        <Preference
            android:key="pain_data"
            android:summary="@string/can_delete_pains"
            android:title="@string/delete_pains" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="treatment"
        android:title="@string/treatment">

        <ListPreference
            android:entries="@array/pill_format"
            android:key="numberOfPills"
            android:summary="@string/choose_nb_pill"
            android:title="@string/pill_tablet_settings"
            app:entryValues="@array/pill_value" />

        <Preference
            android:key="reset_treatment_data"
            android:summary="@string/reset_treatment_data"
            android:title="@string/delete_treatments" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="fertility"
        android:title="@string/fertility">

        <Preference
            android:key="mens_data"
            android:summary="@string/can_delete_mens_data"
            android:title="@string/delete_mens_data" />

        <Preference
            android:key="temp_data"
            android:summary="@string/can_delete_temp_data"
            android:title="@string/delete_temp_data" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="doctor"
        android:title="@string/doctor">

        <Preference
            android:key="comment_data"
            android:summary="@string/can_delete_commentary"
            android:title="@string/delete_comment" />

    </PreferenceCategory>

</PreferenceScreen>