<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:title="@string/dashboard"
        android:icon="@drawable/clipboard"/>

    <item
        android:id="@+id/treatmentFragment"
        android:title="@string/treatment"
        android:icon="@drawable/medicine"/>

    <item
        android:id="@+id/fertilityFragment"
        android:title="@string/fertility"
        android:icon="@drawable/bear"/>

    <item
        android:id="@+id/doctorFragment"
        android:title="@string/doctor"
        android:icon="@drawable/doctor"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"/>

    <item
        android:id="@+id/logOut"
        android:title="@string/sign_out"
        android:icon="@drawable/logout"/>

</menu>