<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/custom_treatment_title"
        style="@style/CardTitle"
        android:background="@color/colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_treatment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_treatment_name_label"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/treatment_s_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custom_treatment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_treatment_duration_label"
        style="@style/CustomTextInputLayoutDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/treatment_s_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_name_label">

        <AutoCompleteTextView
            android:id="@+id/custom_treatment_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_treatment_dosage_label"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/dosage"
        app:layout_constraintEnd_toStartOf="@id/custom_treatment_format_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_duration_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custom_treatment_dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_treatment_format_label"
        style="@style/CustomTextInputLayoutDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/format"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/custom_treatment_dosage_label"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_duration_label">

        <AutoCompleteTextView
            android:id="@+id/custom_treatment_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/custom_treatment_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_dosage_label">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:singleLine="false"
            app:chipSpacingHorizontal="4dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/custom_treatment_morning_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipChoice"
                app:checkedIconEnabled="false"
                android:text="@string/morning"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/custom_treatment_noon_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipChoice"
                app:checkedIconEnabled="false"
                android:text="@string/noon"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/custom_treatment_afternoon_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipChoice"
                app:checkedIconEnabled="false"
                android:text="@string/afternoon"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/custom_treatment_evening_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipChoice"
                app:checkedIconEnabled="false"
                android:text="@string/evening"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:text="@string/click_on_the_day_s_period_to_define_the_notification_s_hour_of_taking_treatment" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/custom_treatment_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/custom_treatment_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/custom_treatment_time"
        app:layout_constraintEnd_toStartOf="@id/custom_treatment_save_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>